# ESP32-Webserver-WifiConfig

./: CMakeLists.txt  Kconfig.projbuild  Makefile  README.md  part.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  auxiliary.c  component.mk  main.c  storage_handler.c  webserver_handler.c  wifi_handler.c
main/include/: auxiliary.h  config.h  storage_handler.h  webserver_handler.h  wifi_handler.h
spiffs_content/: index.html
